# paintcan

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
docs/: api-contracts.md  architecture.md  index.md  legibility-audit.md  quality.md  releasing.md
src/bettercolors/: color_scheme.py  hsba_color.py
src/paintcan/: __main__.py  color_scheme.py  hsba_color.py
tests/: test_color_scheme.py  test_hsba_color.py  test_repo_legibility.py
