[project]
name = "paintcan"
dynamic = ["version"]
description = "A Pythonic library for creating beautiful, algorithmic color schemes."
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/btfranklin/paintcan"
Issues = "https://github.com/btfranklin/paintcan/issues"
Repository = "https://github.com/btfranklin/paintcan.git"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "mypy>=2.0.0",
]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
excludes = ["tests/**"]

[tool.pdm.scripts]
test = "pytest"
lint = "ruff check src tests"
typecheck = "mypy src tests"
"check:repo" = "pytest tests/test_repo_legibility.py"
check = {composite = ["lint", "typecheck", "check:repo", "test"]}
